# mujina

./: .containerignore  .editorconfig  .gitignore  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  build.Containerfile  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: api.md  architecture.md  container.md  cpu-mining.md  getblocktemplate.md
mujina-miner/: Cargo.toml
mujina-miner/src/: backplane.rs  board_manager.rs  daemon.rs  job_generator.rs  lib.rs  scheduler.rs  tracing.rs  types.rs  u256.rs
mujina-miner/src/api/: mod.rs  registry.rs  server.rs  v0.rs  v1.rs
mujina-miner/src/api_client/: mod.rs  types.rs
mujina-miner/src/asic/: hash_thread.rs  mod.rs
mujina-miner/src/asic/bm13xx/: DESIGN.md  PROTOCOL.md  chain.rs  chain_config.rs  chip_config.rs  crc.rs  mod.rs  protocol.rs  sequencer.rs  test_data.rs  thread.rs  thread_v2.rs  topology.rs
mujina-miner/src/board/: bitaxe.rs  cpu.rs  emberone.rs  emberone00.rs  mod.rs  pattern.rs
mujina-miner/src/chip/: bm13xx.rs  crc.rs  mod.rs
mujina-miner/src/chip/bm13xx/: protocol.rs
mujina-miner/src/cpu_miner/: config.rs  hasher.rs  thread.rs
mujina-miner/src/hash_thread/: bm13xx.rs  mod.rs  task.rs
mujina-miner/src/hw_trait/: gpio.rs  mod.rs
mujina-miner/src/job_source/: dummy.rs  extranonce2.rs  forced_rate.rs  getblocktemplate.rs  iterator.rs  job.rs  merkle.rs  mod.rs  stratum_v1.rs  test_blocks.rs  version.rs
mujina-miner/src/job_source/getblocktemplate/: block.rs  coinbase.rs  config.rs  rpc.rs  stats.rs  template.rs
mujina-miner/src/mgmt_protocol/bitaxe_raw/: channel.rs  gpio.rs  i2c.rs  led.rs  mod.rs
mujina-miner/src/peripheral/: emc2101.rs  mod.rs  pmbus.rs  tmp451.rs  tps546.rs
mujina-miner/src/peripheral/led/: mod.rs
mujina-miner/src/peripheral/led/animation/: blink.rs  breathe.rs  flash.rs  hold.rs  mod.rs  off.rs
mujina-miner/src/peripheral/pmbus/: pmbus_types.rs
mujina-miner/src/stratum_v1/: STRATUM_QUIRKS.md  client.rs  connection.rs  error.rs  messages.rs  mod.rs
mujina-miner/src/transport/: mod.rs  serial.rs  usb.rs
mujina-miner/src/transport/usb/: linux.rs  macos.rs
mujina-miner/src/types/: difficulty.rs  extranonce2.rs  frequency.rs  hash_rate.rs  hashrate_estimator.rs  mod.rs  temperature.rs
mujina-miner/src/types/temperature/: conversions.rs
tools/mujina-dissect/: Cargo.toml
tools/mujina-dissect/src/: bm13xx.rs  capture.rs  dissect.rs  main.rs  output.rs  serial.rs
