[workspace]
members = ["mujina-miner", "tools/mujina-dissect"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Ryan Kuester <rkuester@insymbols.com>"]
repository = "https://github.com/256-Foundation/Mujina-Mining-Firmware"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin = "0.32"
bitflags = "2.6"
bitvec = "1.0"
bytes = "1"
crc_all = "0.2"
futures = "0.3"
hex = "0.4"
inventory = "0.3"
modular-bitfield = "0.12"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
test-case = "3.3.1"
thiserror = "2.0"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["time", "local-time", "env-filter"] }
nix = { version = "0.29", features = ["fs", "ioctl", "term"] }
parking_lot = "0.12"
regex = "1.10"
rustix = { version = "0.38", features = ["fs", "termios"] }
slotmap = "1.0"
tokio-udev = "0.10"
udev = "0.9"
