[package]
name = "mujina-miner"
version = "0.1.0"
edition = "2024"
description = "Bitcoin mining software"
license = "GPL-3.0-or-later"
authors = ["Ryan Kuester <rkuester@insymbols.com>"]
repository = "https://github.com/256-Foundation/Mujina-Mining-Firmware"

[dependencies]
anyhow = "1.0"
async-trait = { workspace = true }
bitcoin = "0.32.6"
bitvec = { workspace = true }
bytes = { workspace = true }
crc_all = { workspace = true }
futures = { workspace = true }
hex = "0.4.3"
modular-bitfield = { workspace = true }
sha2 = "0.10.9"
strum = { workspace = true }
thiserror = "2.0.12"
time = { workspace = true }
tokio = { workspace = true }
tokio-serial = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-journald = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
