[package]
name = "mujina-dissect"
version = "0.1.0"
edition.workspace = true
authors = ["Ryan Kuester <rkuester@insymbols.com>"]
license = "GPL-3.0-or-later"
description = "Protocol dissector for Saleae Logic 2 captures of Bitcoin mining hardware"

# TODO: Reconsider the name and crate structure of mujina-dissect
# - Name could be more descriptive (mujina-protocol-analyzer, mujina-capture-analyzer)
# - Consider splitting into library crate for dissection logic + binary for CLI tool
# - Evaluate if this should be a separate workspace member or integrated differently

[[bin]]
name = "mujina-dissect"
path = "src/main.rs"

[dependencies]
# Core miner library for protocol definitions
mujina-miner = { path = "../../mujina-miner" }

# CLI and utilities
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# CSV parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Time handling
chrono = "0.4"

# Output formatting
colored = "2.0"

# Hex formatting
hex = "0.4"

# Protocol parsing
bytes = "1.7"
tokio-util = { version = "0.7", features = ["codec"] }
bitcoin = { workspace = true }

# Logging (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }